# NeuXtalViz

./: .csv  .dockerignore  .mat  .pre-commit-config.yaml  PKG-INFO  README.md  environment.yml  pyproject.toml
.github/workflows/: build.yml
data/: 26079_Niggli.mat  5vnq.cif  garnet.cif
dockerfiles/: Dockerfile  mantid.local.properties  nginx.conf.template  supervisord.conf  trame_environment.yml
scripts/: run_nginx.sh  run_trame.sh
src/: NeuXtalViz.py  nxv.py
src/NeuXtalViz/: _version.py  main.py
src/NeuXtalViz.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/NeuXtalViz/config/: atoms.py  colormap.py  instruments.py  style.py
src/NeuXtalViz/models/: base_model.py  crystal_structure_tools.py  experiment_planner.py  modulation_tools.py  periodic_table.py  reciprocal_space_slicer.py  reciprocal_space_viewer.py  sample_tools.py  satellite_peak_indexer.py  ub_tools.py  utilities.py  volume_slicer.py
src/NeuXtalViz/new_views/: base_view.py  volume_slicer.py
src/NeuXtalViz/presenters/: base_presenter.py  crystal_structure_tools.py  experiment_planner.py  modulation_tools.py  periodic_table.py  reciprocal_space_slicer.py  reciprocal_space_viewer.py  sample_tools.py  satellite_peak_indexer.py  ub_tools.py  volume_slicer.py
src/NeuXtalViz/qt/: gui.py
src/NeuXtalViz/qt/new_views/: base_view.py  volume_slicer.py
src/NeuXtalViz/qt/views/: base_view.py  command_browser.py  crystal_structure_tools.py  experiment_planner.py  modulation_tools.py  periodic_table.py  reduction_plan.py  sample_tools.py  ub_tools.py  utilities.py
src/NeuXtalViz/trame/: gui.py
src/NeuXtalViz/trame/views/: base_view.py  main_view.py  volume_slicer.py
src/NeuXtalViz/trame/views/components/: visualization_panel.py
src/NeuXtalViz/view_models/: base_view_model.py  volume_slicer.py
src/NeuXtalViz/views/: base_view.py  command_browser.py  crystal_structure_tools.py  experiment_planner.py  main_window.py  modulation_tools.py  periodic_table.py  reciprocal_space_slicer.py  reciprocal_space_viewer.py  reduction_plan.py  sample_tools.py  satellite_peak_indexer.py  ub_tools.py  utilities.py  volume_slicer.py
tests/: bash.py  example.py
tests/data/: .~lock.test.csv#  0.707_Tb2Ir3Ga9.mcif  26079_Niggli.integrate  CrCl3.cif  Fe2Mo3O8.cif  Si_Cubic_F.mat  Tb2(Ga3Ir)3.cif  experiment.ascii  experiment.csv  experiment.nxs  garnet.ins  mesolite.cif  natrolite.cif  scolecite.cif  sucrose.cif  test.csv  urea.cif
tests/models/: test_modulation_tools.py
